# mosalloc

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CompilerFlags.cmake  README.md  legacy_memory_region.py  memory_layout_config.py  reserveHugePages.sh  runMosalloc.py  sample_config_legacy_format.csv  sample_config_new_format.csv
include/: FirstFitAllocator.h  GlibcAllocationFunctions.h  HugePageBackedRegion.h  HugePagesConfiguration.h  MemoryAllocator.h  MemoryIntervalList.h  MemoryIntervalListTestHelper.h  MemoryIntervalsValidator.h  NumaMaps.h  ParseCsv.h  PoolConfigurationData.h  globals.h  hooks.h
src/: CMakeLists.txt  FirstFitAllocator.cc  GlibcAllocationFunctions.cc  HugePageBackedRegion.cc  HugePagesConfiguration.cc  MemoryAllocator.cc  MemoryIntervalList.cc  MemoryIntervalsValidator.cc  NumaMaps.cc  ParseCsv.cc  PoolConfigurationData.cc  hooks.cc
src/malloc-standalone-automated/: CMakeLists.txt  README.md  generate.mk
src/malloc-standalone-automated/include/: README.md  auto_stubs.h  config.h  glibc_compat.h  trace.h
src/malloc-standalone-automated/include/special_shims/: ldsodefs.h  libc-internal.h  libc-lock.h  random-bits.h  setvmaname.h  shlib-compat.h
src/malloc-standalone-automated/include/special_shims/elf/: dl-tunables.h
src/malloc-standalone-automated/scripts/: README.md  autoinclude.py
src/malloc-standalone-automated/src/: README.md  errno_shim.c  exports.c  hooks.c  hooks.cc  malloc.c
src/malloc-standalone-minimal/: CMakeLists.txt  README.md
src/malloc-standalone-minimal/include/: README.md  atomic.h  calloc-clear-memory.h  config.h  glibc_compat.h  glibc_shim.h  malloc-machine.h  malloc-sysdep.h  trace.h
src/malloc-standalone-minimal/include/compat_next/: libc-lock.h
src/malloc-standalone-minimal/include/compat_next/bits/: libc-lock.h
src/malloc-standalone-minimal/include/compat_next/elf/: dl-tunables.h
src/malloc-standalone-minimal/include/malloc/: malloc.h
src/malloc-standalone-minimal/src/: README.md  arena.c  exports.c  hooks.cc  malloc.c  morecore.c
test/: CMakeLists.txt  FirstFitAllocatorTest.cc  HugePageBackedRegionTest.cc  MemoryIntervalListTest.cc
